<resources>
  <string name="app_name">Currency Tracker</string>
  <string name="exchange_rates">Exchange Rates</string>
  <string name="crypto_currencies">Crypto Currencies</string>
  <string name="percent_changes">Percent changes:</string>
  <string name="preparing_the_application">Preparing the application…</string>
  <string name="error_no_connection">No internet connection.</string>
  <string name="retry">Retry</string>
  <string name="error_while_reading_data">Error while reading data. Tap to refresh.</string>
  <string name="error_while_reading_chart_data">Error while reading chart data. Tap to refresh.</string>
  <string name="error_while_reading_transactions">Error while reading transactions. Tap to refresh.</string>
  <string name="daily">Daily</string>
  <string name="monthly">Monthly</string>
  <string name="weekly">Weekly</string>
  <string name="graph_time_period">Graph time period:</string>
  <string name="currency_not_supported">Currency not supported!</string>
  <string name="transactions">Transactions</string>
  <string name="no_transactions">You don\'t have any transactions.</string>
  <string name="transaction_date">Transaction date:</string>
  <string name="amount_purchased">Amount purchased:</string>
  <string name="amount_sold">Amount sold:</string>
  <string name="coin_value_at_purchase_time">Coin value at purchase time:</string>
  <string name="coin_value_at_sell_time">Coin value at sell time:</string>
  <string name="current_coin_value">Current coin value:</string>
  <string name="add_transaction">Add transaction</string>
  <string name="label_date">Date:</string>
  <string name="label_coin">Coin:</string>
  <string name="label_amount">Amount:</string>
  <string name="label_coin_price">Coin price(%1$s):</string>
  <string name="hint_coin">Bitcoin, Ripple…</string>
  <string name="hint_amount">1, 2</string>
  <string name="hint_coin_price">$1000</string>
  <string name="purchase">Purchase</string>
  <string name="sell">Sell</string>
  <string name="label_transaction">Transaction type:</string>
  <string name="error_empty_field">Field cannot be empty.</string>
  <string name="error_invalid_real_number">Invalid number value.</string>
  <string name="error_while_saving_transaction">An error occured while saving the transaction.</string>
  <string name="label_coin_name">Coin name:</string>
  <string name="label_coin_symbol">Coin symbol:</string>
  <string name="label_coin_price_simple">Coin price:</string>
  <string name="label_coin_market_cap">Market cap:</string>
  <string name="label_percent_change_hourly">Percent change hourly:</string>
  <string name="label_percent_change_daily">Percent change daily:</string>
  <string name="label_percent_change_weekly">Percent change weekly:</string>
  <string-array name="time_periods">
    <item>Today</item>
    <item>Last week</item>
    <item>Last month</item>
  </string-array>
  <string-array name="available_currencies">
    <item>AUD|Australia Dollar|$|AU</item>
    <item>BRL|Brazil Real|R$|BR</item>
    <item>CAD|Canada Dollar|$|CA</item>
    <item>CHF|Switzerland Frank|CHF|CH</item>
    <item>CNY|China Yuan|\u00A5|CN</item> <!--¥-->
    <item>CZK|Czech Republic Koruna|K\u010D|CZ</item> <!--Kč-->
    <item>DKK|Denmark Krone|kr|DK</item>
    <item>EUR|Euro|\u20ac|EU</item> <!--€-->
    <item>GBP|United Kingdom Pound|\u00A3|GB</item> <!--£-->
    <item>HKD|Hong Kong Dollar|$|HK</item>
    <item>HUF|Hungary Forint|Ft|HU</item>
    <item>IDR|Indonesia Rupiah|Rp|ID</item>
    <item>ILS|Israel Shekel|\u20aa|IL</item> <!--₪-->
    <item>INR|India Rupee|Rupee|IN</item>
    <item>JPY|Japan Yen|\u00A5|JP</item> <!--¥-->
    <item>KRW|Korea Won|\u20A9|KR</item> <!--₩-->
    <item>MXN|Mexico Peso|$|MX</item>
    <item>MYR|Malaysia Ringgit|RM|MY</item>
    <item>NOK|Norway Krone|kr|NO</item>
    <item>NZD|New Zealand Dollar|$|NZ</item>
    <item>PHP|Philippines Piso|\u20B1|PH</item> <!--₱-->
    <item>PLN|Poland Zloty|z\u0142|PL</item> <!--zł-->
    <item>RUB|Russia Ruble|\u20BD|RU</item> <!--₽-->
    <item>SEK|Sweden Krona|kr|SE</item>
    <item>SGD|Singapore Dollar|$|SG</item>
    <item>THB|Thailand Baht|\u0E3F|TH</item> <!--฿-->
    <item>TRY|Turkey Lira|Lira|TR</item>
    <item>USD|United States Dollar|$|US</item>
    <item>ZAR|South Africa Rand|R|ZA</item>
  </string-array>
</resources>
