<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <include layout="@layout/toolbar_title" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="256dp">

      <com.petarvelikov.currencytracker.view.chart.CurrencyHistoryLineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

      <ProgressBar
        android:id="@+id/progressChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

      <TextView
        android:id="@+id/txtChartError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/error_while_reading_chart_data"
        android:textAlignment="center"
        android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
      android:id="@+id/layoutSpinner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/graph_time_period"
        android:textAlignment="center" />

      <Spinner
        android:id="@+id/spinnerTimePeriods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    </LinearLayout>

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:cardCornerRadius="2dp">

      <RelativeLayout
        android:id="@+id/layoutCurrencyDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">


        <TextView
          android:id="@+id/labelCoinName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:layout_alignParentTop="true"
          android:text="@string/label_coin_name"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtCurrencyDetailsName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_toEndOf="@+id/labelCoinName" />


        <TextView
          android:id="@+id/labelCoinSymbol"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelCoinName"
          android:layout_marginTop="4dp"
          android:text="@string/label_coin_symbol"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtCurrencyDetailsSymbol"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelCoinName"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_toEndOf="@+id/labelCoinSymbol" />


        <TextView
          android:id="@+id/labelCoinPrice"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelCoinSymbol"
          android:layout_marginTop="4dp"
          android:text="@string/label_coin_price_simple"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtCurrencyDetailsPrice"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelCoinSymbol"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_toEndOf="@+id/labelCoinPrice" />


        <TextView
          android:id="@+id/labelCoinMarketCap"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelCoinPrice"
          android:layout_marginTop="4dp"
          android:text="@string/label_coin_market_cap"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtCurrencyDetailsMarketCap"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelCoinPrice"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_toEndOf="@+id/labelCoinMarketCap" />


        <TextView
          android:id="@+id/labelPercentChangeHourly"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelCoinMarketCap"
          android:layout_marginTop="4dp"
          android:text="@string/label_percent_change_hourly"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtCurrencyDetailsPercentHourly"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelCoinMarketCap"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_toEndOf="@+id/labelPercentChangeHourly" />


        <TextView
          android:id="@+id/labelPercentChangeDaily"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelPercentChangeHourly"
          android:layout_marginTop="4dp"
          android:text="@string/label_percent_change_daily"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtCurrencyDetailsPercentDaily"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelPercentChangeHourly"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_toEndOf="@+id/labelPercentChangeDaily" />


        <TextView
          android:id="@+id/labelPercentChangeWeekly"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelPercentChangeDaily"
          android:layout_marginTop="4dp"
          android:text="@string/label_percent_change_weekly"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtCurrencyDetailsPercentWeekly"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/labelPercentChangeDaily"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_toEndOf="@+id/labelPercentChangeWeekly" />
      </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
      android:id="@+id/progressCurrencyDetails"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:visibility="gone" />

    <TextView
      android:id="@+id/txtDetailsError"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:text="@string/error_while_reading_data"
      android:textAlignment="center"
      android:visibility="gone" />
  </LinearLayout>
</LinearLayout>